toml-pretty-deser/compilation_failure_tests/alias_struct_same_as_name.rs
//! Alias equal to the field's canonical name must be a compile error.
use toml_pretty_deser::prelude::*;

#[tpd]
#[derive(Debug)]
struct Foo {
    #[tpd(alias = "bar")]
    bar: String,
}

fn main() {}
